core/codegen/tests/ui-fail-stable/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> $DIR/from_form_type_errors.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`
  |
  = note: required because of the requirements on the impl of `FromForm<'__f>` for `Unknown`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> $DIR/from_form_type_errors.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
   |
   = note: required because of the requirements on the impl of `FromForm<'__f>` for `Foo<usize>`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
